test/fail/generated/test_AvgPool2d_stride_pad/model.pb
pytorch0.3:™
K
01"AveragePool*
kernel_shape@@ *
pads@@ *
strides@@ torch-jit-exportZ
0




b
1




B